--- a/nbproject/private/configs/auto_comp.properties
+++ b/nbproject/private/configs/auto_comp.properties
@@ -1,1 +1,1 @@
-application.args=.//home/hermanyo/NetBeansProjects/projeto_compiladores/script_comp.sh
+application.args=./home/hermanyo/NetBeansProjects/calculadora
