--- a/nbproject/private/configs/auto_comp.properties
+++ b/nbproject/private/configs/auto_comp.properties
@@ -1,1 +1,1 @@
-application.args=./home/hermanyo/NetBeansProjects/calculadora
+application.args=ant && java -jar "/home/hermanyo/NetBeansProjects/projeto_compiladores/dist/projeto_compiladores.jar"
